--- a/archives/toutiao-search/2023-10-07.md
+++ b/archives/toutiao-search/2023-10-07.md
@@ -1,61 +1,81 @@
 # 2023-10-07
 
-共 294 条
+共 313 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Oct 07 2023 21:01:54 GMT+0800 (China Standard Time) -->
-1. [海滩女童走失：“野海滩”的另一面](https://so.toutiao.com/search?keyword=海滩女童走失：“野海滩”的另一面)
-1. [姚明谈男篮失利：可以接受辞职回家](https://so.toutiao.com/search?keyword=姚明谈男篮失利：可以接受辞职回家)
+<!-- 最后更新时间 Sat Oct 07 2023 22:00:44 GMT+0800 (China Standard Time) -->
+1. [哈马斯组织为何突袭以色列](https://so.toutiao.com/search?keyword=哈马斯组织为何突袭以色列)
+1. [国内油价预计将迎来大幅下调](https://so.toutiao.com/search?keyword=国内油价预计将迎来大幅下调)
 1. [亚运会参赛代表团点赞中国之行](https://so.toutiao.com/search?keyword=亚运会参赛代表团点赞中国之行)
-1. [家长和监护人要注意这些事](https://so.toutiao.com/search?keyword=家长和监护人要注意这些事)
-1. [央视主持人张泽群实名举报朝阳区法院](https://so.toutiao.com/search?keyword=央视主持人张泽群实名举报朝阳区法院)
-1. [俄试射“末日武器”](https://so.toutiao.com/search?keyword=俄试射“末日武器”)
-1. [以色列军队宣布对加沙地带发动空袭](https://so.toutiao.com/search?keyword=以色列军队宣布对加沙地带发动空袭)
+1. [以色列总理：以色列正处于战争状态](https://so.toutiao.com/search?keyword=以色列总理：以色列正处于战争状态)
 1. [新郎看到新娘穿着校服瞬间泪奔](https://so.toutiao.com/search?keyword=新郎看到新娘穿着校服瞬间泪奔)
+1. [美国海军不认识解放军战斗机](https://so.toutiao.com/search?keyword=美国海军不认识解放军战斗机)
+1. [以色列军队宣布对加沙地带发动空袭](https://so.toutiao.com/search?keyword=以色列军队宣布对加沙地带发动空袭)
+1. [亚运九冠王！中国女排3-0日本成功卫冕](https://so.toutiao.com/search?keyword=亚运九冠王！中国女排3-0日本成功卫冕)
 1. [泰将赔偿枪案遇难者每人620万泰铢](https://so.toutiao.com/search?keyword=泰将赔偿枪案遇难者每人620万泰铢)
 1. [受伤时不能吃羊肉等“发物”？假的](https://so.toutiao.com/search?keyword=受伤时不能吃羊肉等“发物”？假的)
-1. [走失女童父亲事发时曾去取手机](https://so.toutiao.com/search?keyword=走失女童父亲事发时曾去取手机)
 1. [中国女游客在泰国五星级酒店坠亡](https://so.toutiao.com/search?keyword=中国女游客在泰国五星级酒店坠亡)
-1. [哈马斯组织为何突袭以色列](https://so.toutiao.com/search?keyword=哈马斯组织为何突袭以色列)
 1. [蔡徐坤说我也有自己的需求](https://so.toutiao.com/search?keyword=蔡徐坤说我也有自己的需求)
 1. [女子摸狗脸被撕咬坐地哀嚎](https://so.toutiao.com/search?keyword=女子摸狗脸被撕咬坐地哀嚎)
+1. [外媒：有以色列公民士兵被劫持俘虏](https://so.toutiao.com/search?keyword=外媒：有以色列公民士兵被劫持俘虏)
+1. [姚明谈男篮失利：可以接受辞职回家](https://so.toutiao.com/search?keyword=姚明谈男篮失利：可以接受辞职回家)
+1. [中秋国庆假期最挤城市排行榜](https://so.toutiao.com/search?keyword=中秋国庆假期最挤城市排行榜)
+1. [胡锡进谈美国参议员代表团访华](https://so.toutiao.com/search?keyword=胡锡进谈美国参议员代表团访华)
+1. [专家：春节、元宵等可增加假期](https://so.toutiao.com/search?keyword=专家：春节、元宵等可增加假期)
+1. [俄试射“末日武器”](https://so.toutiao.com/search?keyword=俄试射“末日武器”)
+1. [杜兆才系足坛反腐落马级别最高官员](https://so.toutiao.com/search?keyword=杜兆才系足坛反腐落马级别最高官员)
+1. [律师谈狗扑咬女子：若未拴绳主人担责](https://so.toutiao.com/search?keyword=律师谈狗扑咬女子：若未拴绳主人担责)
+1. [专家建议推行每周2.5天休息日](https://so.toutiao.com/search?keyword=专家建议推行每周2.5天休息日)
+1. [英国对加拿大和印度争端升级表态](https://so.toutiao.com/search?keyword=英国对加拿大和印度争端升级表态)
+1. [男子趁高速免费最后20秒卡点出站](https://so.toutiao.com/search?keyword=男子趁高速免费最后20秒卡点出站)
+1. [贝嫂首次回应20年前贝克汉姆出轨丑闻](https://so.toutiao.com/search?keyword=贝嫂首次回应20年前贝克汉姆出轨丑闻)
+1. [车辆冲断围栏碾压腾格里治沙植物](https://so.toutiao.com/search?keyword=车辆冲断围栏碾压腾格里治沙植物)
+1. [凡晨组合亚运羽毛球女双夺冠](https://so.toutiao.com/search?keyword=凡晨组合亚运羽毛球女双夺冠)
+1. [曝华为9月重回中国国产手机销量第1](https://so.toutiao.com/search?keyword=曝华为9月重回中国国产手机销量第1)
+1. [中国男篮颁奖仪式像犯错的孩子](https://so.toutiao.com/search?keyword=中国男篮颁奖仪式像犯错的孩子)
+1. [房地产还有救吗](https://so.toutiao.com/search?keyword=房地产还有救吗)
+1. [中国姐妹花获得亚运花游双人金牌](https://so.toutiao.com/search?keyword=中国姐妹花获得亚运花游双人金牌)
+1. [霍启刚八字点评中国香港代表团表现](https://so.toutiao.com/search?keyword=霍启刚八字点评中国香港代表团表现)
+1. [学生打数十个电话举报学校假期补课](https://so.toutiao.com/search?keyword=学生打数十个电话举报学校假期补课)
+1. [胡锡进：今年国庆档电影票房令人失望](https://so.toutiao.com/search?keyword=胡锡进：今年国庆档电影票房令人失望)
+1. [男子吃花蛤发现壳有字 拍摄者发声](https://so.toutiao.com/search?keyword=男子吃花蛤发现壳有字+拍摄者发声)
+1. [普京：俄军在战斗接触线上充满自信](https://so.toutiao.com/search?keyword=普京：俄军在战斗接触线上充满自信)
+1. [普京：俄罗斯不谋求他国领土](https://so.toutiao.com/search?keyword=普京：俄罗斯不谋求他国领土)
+1. [广东清远市委原书记郭锋被查](https://so.toutiao.com/search?keyword=广东清远市委原书记郭锋被查)
+1. [警方回应女子逗狗被扑咬：正在调查](https://so.toutiao.com/search?keyword=警方回应女子逗狗被扑咬：正在调查)
+1. [女孩国庆后返岗发现公司倒闭了](https://so.toutiao.com/search?keyword=女孩国庆后返岗发现公司倒闭了)
+1. [阿姨因家被盗每天带150万家当出门](https://so.toutiao.com/search?keyword=阿姨因家被盗每天带150万家当出门)
+1. [狗狗误食3斤泡酒的杨梅醉倒](https://so.toutiao.com/search?keyword=狗狗误食3斤泡酒的杨梅醉倒)
+1. [男子买车因拍视频遭工作人员驱赶](https://so.toutiao.com/search?keyword=男子买车因拍视频遭工作人员驱赶)
+1. [阿姨坐公交不慎遗落150余万家当](https://so.toutiao.com/search?keyword=阿姨坐公交不慎遗落150余万家当)
+1. [哈马斯借鉴俄乌冲突经验击毁以坦克](https://so.toutiao.com/search?keyword=哈马斯借鉴俄乌冲突经验击毁以坦克)
+1. [美方将42家中企列入出口管制清单](https://so.toutiao.com/search?keyword=美方将42家中企列入出口管制清单)
+1. [黄娟获激流回旋女子单人划艇金牌](https://so.toutiao.com/search?keyword=黄娟获激流回旋女子单人划艇金牌)
+1. [亚运霹雳舞技术官员忍不住技痒出手](https://so.toutiao.com/search?keyword=亚运霹雳舞技术官员忍不住技痒出手)
+1. [亚运冠军王楠低调回家](https://so.toutiao.com/search?keyword=亚运冠军王楠低调回家)
+1. [如何看待蔡徐坤疑回应私生活争议](https://so.toutiao.com/search?keyword=如何看待蔡徐坤疑回应私生活争议)
+1. [海滩女童走失：“野海滩”的另一面](https://so.toutiao.com/search?keyword=海滩女童走失：“野海滩”的另一面)
+1. [家长和监护人要注意这些事](https://so.toutiao.com/search?keyword=家长和监护人要注意这些事)
+1. [央视主持人张泽群实名举报朝阳区法院](https://so.toutiao.com/search?keyword=央视主持人张泽群实名举报朝阳区法院)
+1. [走失女童父亲事发时曾去取手机](https://so.toutiao.com/search?keyword=走失女童父亲事发时曾去取手机)
 1. [哈马斯20分钟向以方发射数千火箭弹](https://so.toutiao.com/search?keyword=哈马斯20分钟向以方发射数千火箭弹)
-1. [美国海军不认识解放军战斗机](https://so.toutiao.com/search?keyword=美国海军不认识解放军战斗机)
 1. [8.26亿人次出游花了7534.3亿元](https://so.toutiao.com/search?keyword=8.26亿人次出游花了7534.3亿元)
 1. [哈马斯袭击已造成22名以色列人死亡](https://so.toutiao.com/search?keyword=哈马斯袭击已造成22名以色列人死亡)
-1. [中秋国庆假期最挤城市排行榜](https://so.toutiao.com/search?keyword=中秋国庆假期最挤城市排行榜)
 1. [泰国警方回应中国女游客坠亡事件](https://so.toutiao.com/search?keyword=泰国警方回应中国女游客坠亡事件)
-1. [专家：春节、元宵等可增加假期](https://so.toutiao.com/search?keyword=专家：春节、元宵等可增加假期)
-1. [英国对加拿大和印度争端升级表态](https://so.toutiao.com/search?keyword=英国对加拿大和印度争端升级表态)
-1. [国内油价预计将迎来大幅下调](https://so.toutiao.com/search?keyword=国内油价预计将迎来大幅下调)
-1. [律师谈狗扑咬女子：若未拴绳主人担责](https://so.toutiao.com/search?keyword=律师谈狗扑咬女子：若未拴绳主人担责)
 1. [做过外卖员的他30岁破格进入国家队](https://so.toutiao.com/search?keyword=做过外卖员的他30岁破格进入国家队)
 1. [一场羽毛球比赛要用多少个球](https://so.toutiao.com/search?keyword=一场羽毛球比赛要用多少个球)
-1. [中国男篮颁奖仪式像犯错的孩子](https://so.toutiao.com/search?keyword=中国男篮颁奖仪式像犯错的孩子)
-1. [贝嫂首次回应20年前贝克汉姆出轨丑闻](https://so.toutiao.com/search?keyword=贝嫂首次回应20年前贝克汉姆出轨丑闻)
-1. [男子趁高速免费最后20秒卡点出站](https://so.toutiao.com/search?keyword=男子趁高速免费最后20秒卡点出站)
 1. [消息称38岁私募董事长系意外身亡](https://so.toutiao.com/search?keyword=消息称38岁私募董事长系意外身亡)
-1. [学生打数十个电话举报学校假期补课](https://so.toutiao.com/search?keyword=学生打数十个电话举报学校假期补课)
 1. [南京胖哥买东西被认出老板直接免单](https://so.toutiao.com/search?keyword=南京胖哥买东西被认出老板直接免单)
-1. [房地产还有救吗](https://so.toutiao.com/search?keyword=房地产还有救吗)
 1. [《坚如磐石》：中国人的饭局不简单](https://so.toutiao.com/search?keyword=《坚如磐石》：中国人的饭局不简单)
 1. [救护车工作人员遭殴打 警方介入](https://so.toutiao.com/search?keyword=救护车工作人员遭殴打+警方介入)
 1. [南京胖哥：会调整好心态](https://so.toutiao.com/search?keyword=南京胖哥：会调整好心态)
 1. [俄称退出条约不意味着会开展核试验](https://so.toutiao.com/search?keyword=俄称退出条约不意味着会开展核试验)
-1. [胡锡进：今年国庆档电影票房令人失望](https://so.toutiao.com/search?keyword=胡锡进：今年国庆档电影票房令人失望)
-1. [曝华为9月重回中国国产手机销量第1](https://so.toutiao.com/search?keyword=曝华为9月重回中国国产手机销量第1)
 1. [美专家：西方拱火使乌克兰危机升级](https://so.toutiao.com/search?keyword=美专家：西方拱火使乌克兰危机升级)
 1. [普布顿珠任四川省委常委](https://so.toutiao.com/search?keyword=普布顿珠任四川省委常委)
 1. [俄军战机挪威海上空拦截美国军机](https://so.toutiao.com/search?keyword=俄军战机挪威海上空拦截美国军机)
-1. [男子买车因拍视频遭工作人员驱赶](https://so.toutiao.com/search?keyword=男子买车因拍视频遭工作人员驱赶)
 1. [亚运会霹雳舞“高燃”座无虚席](https://so.toutiao.com/search?keyword=亚运会霹雳舞“高燃”座无虚席)
-1. [男子吃花蛤发现壳有字 拍摄者发声](https://so.toutiao.com/search?keyword=男子吃花蛤发现壳有字+拍摄者发声)
-1. [美方将42家中企列入出口管制清单](https://so.toutiao.com/search?keyword=美方将42家中企列入出口管制清单)
-1. [亚运冠军王楠低调回家](https://so.toutiao.com/search?keyword=亚运冠军王楠低调回家)
 1. [蔡徐坤工作室时隔三个月再营业](https://so.toutiao.com/search?keyword=蔡徐坤工作室时隔三个月再营业)
-1. [专家建议推行每周2.5天休息日](https://so.toutiao.com/search?keyword=专家建议推行每周2.5天休息日)
 1. [同在亚运会 同爱亚运会](https://so.toutiao.com/search?keyword=同在亚运会+同爱亚运会)
-1. [以色列总理：以色列正处于战争状态](https://so.toutiao.com/search?keyword=以色列总理：以色列正处于战争状态)
 1. [女子逗狗被咬 狗主人：肯定会赔偿](https://so.toutiao.com/search?keyword=女子逗狗被咬+狗主人：肯定会赔偿)
 1. [国家体育总局原副局长杜兆才被双开](https://so.toutiao.com/search?keyword=国家体育总局原副局长杜兆才被双开)
 1. [杰哈德加入哈马斯对以色列军事行动](https://so.toutiao.com/search?keyword=杰哈德加入哈马斯对以色列军事行动)
@@ -79,7 +99,6 @@
 1. [WTT兰州站林高远进男单4强](https://so.toutiao.com/search?keyword=WTT兰州站林高远进男单4强)
 1. [陈数晒老照片](https://so.toutiao.com/search?keyword=陈数晒老照片)
 1. [郭台铭阵营称若连署破100万将捐款](https://so.toutiao.com/search?keyword=郭台铭阵营称若连署破100万将捐款)
-1. [警方回应女子逗狗被扑咬：正在调查](https://so.toutiao.com/search?keyword=警方回应女子逗狗被扑咬：正在调查)
 1. [台“数位部”被批出境预算列太多](https://so.toutiao.com/search?keyword=台“数位部”被批出境预算列太多)
 1. [上交所：现在A股实行T+0时机不成熟](https://so.toutiao.com/search?keyword=上交所：现在A股实行T+0时机不成熟)
 1. [俄罗斯海燕核动力巡航导弹威力如何](https://so.toutiao.com/search?keyword=俄罗斯海燕核动力巡航导弹威力如何)
